@startuml

class User {
    - id: Int
    - name: String
    - email: String
    - password: String
}

class Event {
    - id: Int
    - title: String
    - background_image: String
    - category: Category
    - subcategory: SubCategory
    - description: String
    - event_start_date: Date
    - event_end_date: Date
    - location: Address
    - entry_fee: Float
    - host: User
    - IsPrivate: Boolean
}

class Category {
    -id: Int
    -name: String
    -subcategories: list<String>
}


class EventAttendance {
    -user_id: user.id
    -event_id: event.id
    -is_confirmed: Boolean
    -is_favorited: Boolean 
}

class UserChat {
    user_id: user.id
    chat_id: chat.id
}

class Message {
    -id: Int
    -chat_id: chat.id
    -sender_id: Int
    -content: String   
    -sent_at: Date
}


class Comment {
    -id: Int
    -author_id: Int
    -event_id: Int
    -content: String
    -replies: List<Comment>
}

class Address {
    - country: String
    - state: String
    - city: String
    - zip_code: String
    - complement: String
}

class Chat {
    -id: Int
    -participants: List<User>
    -messages: List<Message>
}



class Profile {
    -pic: String
    -created_at: Date
    -date_of_birth: Date
    -address: List<Address>
    -subscribed_events: List<Event>
}

class ReadMessage {
    -message_id: message.id
    -user_id: user.id
    -read_at: Date
}

class Notification {

}



(User, Event) .. EventAttendance
(User, Chat) .. UserChat
Event "1" o-- "0..*" Comment
Chat "1" *-- "0..*" Message
Event "0..*" o-- "1" Category
Comment "1" *-- "0..*" Comment
User "1" *-- "1" Profile
Profile "1" o-- "0..*" Address
Message "1" *-- "1" ReadMessage


@enduml